fix(details): helptext wordwrap in dd

--- a/apps/data-norge/src/app/components/details-page/details-page.module.scss
+++ b/apps/data-norge/src/app/components/details-page/details-page.module.scss
@@ -79,6 +79,10 @@
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
+
+                :global(.fds-helptext__content) {
+                    white-space: wrap;
+                }
             }
 
             dd {
